feat(api/subscription): add bills_at attribute
