# app/serializers/api/internal/v1/subscription_serializer.rb
@@ -1,5 +1,5 @@
 class Api::Internal::V1::SubscriptionSerializer < ActiveModel::Serializer
-  attributes :id, :customer_id, :pricing_subscriptions, :created_at, :trial_finishes_at,
+  attributes :id, :customer_id, :pricing_subscriptions, :created_at, :trial_finishes_at, :bills_at,
              :pricing_ids, :billing_period_duration
 
   def pricing_ids
