# app/serializers/api/v1/subscription_serializer.rb
@@ -1,5 +1,5 @@
 class Api::V1::SubscriptionSerializer < Api::BaseSerializer
-  attributes  :id, :customer_id, :created_at, :updated_at, :active, :trial_finishes_at,
+  attributes  :id, :customer_id, :created_at, :updated_at, :active, :trial_finishes_at, :bills_at,
               :pricing_ids, :billing_period_duration
 
   def pricing_ids
